--- a/translator.css
+++ b/translator.css
@@ -1,118 +1,182 @@
-body , html {
-    width: 98.6vw;
-    height: 100%;
-    transition: all;
-    background: linear-gradient(to right, #ad5389, #3c1053);
+body,
+html {
+  width: 98.6vw;
+  height: 100%;
+  transition: all;
+  background: linear-gradient(to right, #ad5389, #3c1053);
 }
 header {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    /* background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); */
-    background: linear-gradient(to left, #355c7d, #6c5b7b, #c06c84);
-    padding: 20px 0;
-    box-shadow:3px 3px 10px ;
-    
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  /* background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); */
+  background: linear-gradient(to left, #355c7d, #6c5b7b, #c06c84);
+  padding: 20px 0;
+  box-shadow: 3px 3px 10px;
 }
 header div {
-    margin-left: 10%;
-    display: flex;
-    gap: 1%;
+  margin-left: 10%;
+  display: flex;
+  gap: 1%;
 }
 header p {
-    margin: 0;
-    font-size: 2.5em;
-    font-weight: 550;
-    text-shadow: 4px 5px 2px  #544a7d;
+  margin: 0;
+  font-size: 2.5em;
+  font-weight: 550;
+  text-shadow: 4px 5px 2px #544a7d;
 
-    font-family: 'FAFERS Technical Font', sans-serif;
-                                        
-                                        
+  font-family: "FAFERS Technical Font", sans-serif;
 }
 .material-icons {
-    width: 2%;
-    margin-top: 14px;
+  width: 2%;
+  margin-top: 14px;
 }
 .h1 {
-    /* margin-top: 14%; */
-    margin-top: 2%;
-    /* padding-top: -24px; */
-    /* padding-bottom: px; */
-    margin-bottom: 25px;
+  /* margin-top: 14%; */
+  margin-top: 2%;
+  /* padding-top: -24px; */
+  /* padding-bottom: px; */
+  margin-bottom: 25px;
 }
 article {
-
 }
 
 section {
-    width: 99%;
-    margin-top: 2%;
-    color: white;
+  width: 99%;
+  margin-top: 2%;
+  color: white;
 
-    position: absolute;
-    top: 10%;
-    text-align: center;
+  position: absolute;
+  top: 10%;
+  text-align: center;
 }
 /* * {
     border: 1px solid red;
 } */
 .swap {
-    position: relative;
-    top: 25px;
+  position: relative;
+  top: 25px;
 }
 textarea {
-    width: 20%;
-    height: 200px;
-    font-size: 1.25rem;
-    resize: none;
-    border: 1px solid #ccc;
-    background: #efefef;
-    padding: 1rem 2rem 1rem 1.5rem;
-    overflow-y: hidden;
-    margin-left: 20px;
-
+  width: 20%;
+  height: 200px;
+  font-size: 1.25rem;
+  resize: none;
+  border: 1px solid #ccc;
+  background: #efefef;
+  padding: 1rem 2rem 1rem 1.5rem;
+  overflow-y: hidden;
+  margin-left: 20px;
 }
 .text {
-    margin-left: auto;
-    left: auto;
-    right: auto;
-    margin-top: 2%
+  margin-left: auto;
+  left: auto;
+  right: auto;
+  margin-top: 2%;
 }
- .translateFrom {
-    position: absolute;
-    left: 27%;
-    top: 28%;
+.translateFrom {
+  position: absolute;
+  left: 27%;
+  top: 28%;
 }
 .translateTo {
-    position: absolute;
-    right: 26%;
-    top: 28%;
-
+  position: absolute;
+  right: 26%;
+  top: 28%;
 }
-.translateToLang, 
+.translateToLang,
 .translateFromLang {
-    cursor: pointer;
+  cursor: pointer;
 }
 button {
-    margin-top: 2%;
-    padding: 18px 2.2%;
-    border-radius: 8px;
-    cursor: pointer;
-    background: teal;
-    color: #ccc;
+  margin-top: 2%;
+  padding: 18px 2.2%;
+  border-radius: 8px;
+  cursor: pointer;
+  background: teal;
+  color: #ccc;
 }
 button:hover {
-    
-    animation-name: translate;
-    animation-duration: 2s;
-    /* animation-iteration-count: infinite; */
-    animation-fill-mode: forwards;
+  animation-name: translate;
+  animation-duration: 2s;
+  /* animation-iteration-count: infinite; */
+  animation-fill-mode: forwards;
 }
 
 @keyframes translate {
-    100% {
-        background: #544a7d;
+  100% {
+    background: #544a7d;
+  }
+}
+
+/* `xs` returns only a ruleset and no media query */
+
+/* `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  * {
+    /* border : 1px solid  */
+  }
+  body,
+  html {
+    background: white;
+  }
+  header {
+      margin: auto;
+  }
+  .translateFrom {
+    color: goldenrod;
+    position: relative;
+    left: -28%;
+    margin-top: 12%;
+    top: 62px;
+}
+  
+  .translateTo {
+      color: blueviolet;
+      position: relative;
+      bottom: 0px;
+      left: 53%;
+      display: flex;
+      width: 140px;
+
+  }
+  button {
+      margin-top: 4%;
+      padding: 9px 5.2%;
+  }
+  
+  .translateToLang,
+  .translateFromLang {
+    width: 59px;
+  }
+  .text {
+      margin-top: 3%;
+      margin-right: 20px;
+      
+  }
+  
+}
+
+/* `md` applies to small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+    h1 {
+        display: none;
     }
-    
+}
+
+/* `lg` applies to medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+    h1 {
+        color: red;
+        /* display: none; */
+    }
+}
+
+/* `xl` applies to large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+}
+
+/* `xxl` applies to x-large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) {
 }
