responsive done for xl devices

--- a/translator.css
+++ b/translator.css
@@ -122,7 +122,7 @@ button:hover {
     background: white;
   }
   header {
-      margin: auto;
+    margin: auto;
   }
   .translateFrom {
     color: goldenrod;
@@ -130,106 +130,141 @@ button:hover {
     left: -28%;
     margin-top: 12%;
     top: 62px;
-}
-  
-  .translateTo {
-      color: blueviolet;
-      position: relative;
-      bottom: 0px;
-      left: 53%;
-      display: flex;
-      width: 140px;
+  }
 
+  .translateTo {
+    color: blueviolet;
+    position: relative;
+    bottom: 0px;
+    left: 53%;
+    display: flex;
+    width: 140px;
   }
   button {
-      margin-top: 4%;
-      padding: 9px 5.2%;
+    margin-top: 4%;
+    padding: 9px 5.2%;
   }
-  
+
   .translateToLang,
   .translateFromLang {
     width: 59px;
   }
   .text {
-      margin-top: 3%;
-      margin-right: 20px;
-      
+    margin-top: 3%;
+    margin-right: 20px;
   }
-  
 }
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-    h1 {
-        display: none;
-    }
+  h1 {
+    display: none;
+  }
 }
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
-    * {
-        /* border : 1px solid red; */
-    }
-    h1 {
-        /* color: red; */
-        display: none;
-    }
-    .translateFrom {
-        color: goldenrod;
-        position: relative;
-        left: -18%;
-        margin-top: 12%;
-        top: 62px;
-        font-size: large;
-    }
-      
-      .translateTo {
-        /* border : 1px solid red; */
-        
-        color: blueviolet;
-          position: relative;
-          bottom: 0px;
-          left: 58%;
-          display: flex;
-          width: 180px;
-           font-size: large;
+  * {
+    /* border : 1px solid red; */
+  }
+  h1 {
+    /* color: red; */
+    display: none;
+  }
+  .translateFrom {
+    color: goldenrod;
+    position: relative;
+    left: -18%;
+    margin-top: 12%;
+    top: 62px;
+    font-size: large;
+  }
 
-    
-      }
-      .to {
-          margin-right: 10px;
-          width: 90px;
+  .translateTo {
+    /* border : 1px solid red; */
 
-      }
-      button {
-          margin-top: 4%;
-          padding: 9px 5.2%;
-      }
-      
-      .translateToLang,
-      .translateFromLang {
-        width: 59px;
-      }
-      .text {
-          margin-top: 3%;
-          margin-right: 20px;
-          
-      }
-      textarea { 
-        font-size: 22px;
+    color: blueviolet;
+    position: relative;
+    bottom: 0px;
+    left: 58%;
+    display: flex;
+    width: 180px;
+    font-size: large;
+  }
+  .to {
+    margin-right: 10px;
+    width: 90px;
+  }
+  button {
+    margin-top: 4%;
+    padding: 9px 5.2%;
+  }
 
-      }
-      
+  .translateToLang,
+  .translateFromLang {
+    width: 59px;
+  }
+  .text {
+    margin-top: 3%;
+    margin-right: 20px;
+  }
+  textarea {
+    font-size: 22px;
+  }
 }
-
 
 /* `xl` applies to large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
-    h1 {
-        color: red
-    }
+  h1 {
+    color: black;
+    display: none;
+  }
+  .translateFrom {
+    color: goldenrod;
+    position: relative;
+    left: -18%;
+    margin-top: 12%;
+    top: 62px;
+    font-size: large;
+  }
+
+  .translateTo {
+    /* border : 1px solid red; */
+
+    color: blueviolet;
+    position: relative;
+    bottom: 0px;
+    left: 58%;
+    display: flex;
+    width: 180px;
+    font-size: large;
+  }
+  .to {
+    margin-right: 10px;
+    width: 90px;
+  }
+  button {
+    margin-top: 4%;
+    padding: 9px 5.2%;
+  }
+
+  .translateToLang,
+  .translateFromLang {
+    width: 59px;
+  }
+  .text {
+    margin-top: 3%;
+    margin-right: 20px;
+  }
+  textarea {
+    font-size: 30px;
+  }
 }
 
-/* `xxl` applies to x-large devices (large desktops, less than 1400px) */
-@media (max-width: 1399.98px) {
+/* `xxl` applies to x-large devices (large desktops, larger than 1200px) */
+@media (min-width: 1200px) {
+  h1 {
+    /* color: olivedrab; */
+    /* display: none; */
+  }
 }
