--- a/translator.css
+++ b/translator.css
@@ -1,5 +1,4 @@
-body,
-html {
+body {
   width: 98.6vw;
   height: 100%;
   transition: all;
@@ -10,7 +9,6 @@ header {
   left: 0;
   right: 0;
   top: 0;
-  /* background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); */
   background: linear-gradient(to left, #355c7d, #6c5b7b, #c06c84);
   padding: 20px 0;
   box-shadow: 3px 3px 10px;
@@ -25,7 +23,6 @@ header p {
   font-size: 2.5em;
   font-weight: 550;
   text-shadow: 4px 5px 2px #544a7d;
-
   font-family: "FAFERS Technical Font", sans-serif;
 }
 .material-icons {
@@ -33,14 +30,10 @@ header p {
   margin-top: 14px;
 }
 .h1 {
-  /* margin-top: 14%; */
   margin-top: 2%;
-  /* padding-top: -24px; */
-  /* padding-bottom: px; */
   margin-bottom: 25px;
 }
-article {
-}
+
 
 section {
   width: 99%;
@@ -51,9 +44,7 @@ section {
   top: 10%;
   text-align: center;
 }
-/* * {
-    border: 1px solid red;
-} */
+
 .swap {
   position: relative;
   top: 25px;
@@ -100,7 +91,6 @@ button {
 button:hover {
   animation-name: translate;
   animation-duration: 2s;
-  /* animation-iteration-count: infinite; */
   animation-fill-mode: forwards;
 }
 
@@ -113,23 +103,30 @@ button:hover {
 /* `xs` returns only a ruleset and no media query */
 
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
-  * {
-    /* border : 1px solid  */
-  }
+@media only screen and (max-width: 600px) {
+  
   body,
   html {
     background: white;
+  }
+  h1 {
+      color: red;
+      display: none;
   }
   header {
     margin: auto;
   }
   .translateFrom {
-    color: goldenrod;
+    color: red;
     position: relative;
-    left: -28%;
+    left: 15px;
     margin-top: 12%;
     top: 62px;
+    display: flex;
+  }
+  .from, .to {
+      font-size: 15px;
+      margin-right: 5px;
   }
 
   .translateTo {
@@ -156,21 +153,16 @@ button:hover {
 }
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media only screen and (min-width: 600px) {
   h1 {
     display: none;
   }
+  
 }
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
-@media (max-width: 991.98px) {
-  * {
-    /* border : 1px solid red; */
-  }
-  h1 {
-    /* color: red; */
-    display: none;
-  }
+@media only screen and (min-width: 768px) {
+  
   .translateFrom {
     color: goldenrod;
     position: relative;
@@ -178,10 +170,11 @@ button:hover {
     margin-top: 12%;
     top: 62px;
     font-size: large;
+    display: flex;
+    margin-left: 40%;
   }
 
   .translateTo {
-    /* border : 1px solid red; */
 
     color: blueviolet;
     position: relative;
@@ -214,7 +207,7 @@ button:hover {
 }
 
 /* `xl` applies to large devices (desktops, less than 1200px) */
-@media (max-width: 1199.98px) {
+@media only screen and (min-width: 992px) {
   h1 {
     color: black;
     display: none;
@@ -226,10 +219,10 @@ button:hover {
     margin-top: 12%;
     top: 62px;
     font-size: large;
+    margin-left: 42%;
   }
 
   .translateTo {
-    /* border : 1px solid red; */
 
     color: blueviolet;
     position: relative;
@@ -264,13 +257,12 @@ button:hover {
 /* `xxl` applies to x-large devices (large desktops, larger than 1200px) */
 @media (min-width: 1200px) {
   h1 {
-    /* color: olivedrab; */
     display: none;
   }
   .translateFrom {
       position: relative;
       left: -15%;
-      top: 65px;
+      bottom: 50px;
       font-size: 20px
   }
   .translateTo {
@@ -278,13 +270,30 @@ button:hover {
     display: flex;
     align-items: center;
 
-  }
-  .to {
-      margin-right: 10px;
-      font-size: 20px
-  }
-  .swap {
-      padding-left: 20px
-  }
 
+  }
+  .to, .from {
+      margin-right: 10px;
+      font-size: 20px;
+      width: auto;
+      margin-bottom: inherit;
+      
+  }
+  
+  .swap {
+      padding-left: 10px;
+      margin-bottom: 20px;
+  }
+  article {
+    position: relative;
+    bottom: 150px;
+}
+.translateToLang {
+    position: relative;
+    top: 13px
+}
+button {
+    position: relative;
+    bottom: 25px;
+}
 }
